homepage slide2 overlapping from image with text fixed

--- a/app/assets/stylesheets/_home.css.scss
+++ b/app/assets/stylesheets/_home.css.scss
@@ -117,7 +117,7 @@ header{
   background-image: image_url('slide2.png');
   background-repeat: no-repeat;
   background-position:110% bottom;
-  background-size: 70%;
+  background-size: 67%;
   position:relative;
   height:750px;
   display:none;
